fix bottom of FAQ request covering up cards

--- a/scripts/index.css
+++ b/scripts/index.css
@@ -19,6 +19,7 @@
   height: calc(100vh - 56px);
   overflow-y: auto;
   width: 100%;
+  padding-bottom: 50px;
 }
 
 .img-container {
@@ -74,6 +75,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  background-color: rgba(255, 255, 255, 0);
 
   display: flex;
   justify-content: center;
